--- a/1_webapp/Web/index3.html
+++ b/1_webapp/Web/index3.html
@@ -1,13 +1,31 @@
-<form>
-	<fieldset>
-		<legend>Connection au site</legend>
-		<label>Pseudo:</label>
-		<input id="pseudo" type="text"/>
-		<br />
-		<label>Mot de passe:<label/>
-		<input id="Mot de passe" type="password"/>
-		<br />
-		<label>Cochez si vous n'ete pas un robot</label>
-		<input id="check" type="checkbox"/>
-	</fieldset>
-</form>
+<html>
+    <style type="text/css">
+        .formulaire{
+            font-family:"Comic Sans MS";
+                text-align:center;
+                background-color:lightgrey;
+                margin:auto;
+                width:80%
+        }
+    </style>
+
+
+
+
+
+    <div id="formulaire" class="formulaire">
+        <form action="page2.html" method="get">
+            <h2>Connection au site</h2>
+            <label>Pseudo :</label>
+            <input id="pseudo" type="text" />
+                <br />
+            <label>Mot de passe :</label>
+            <input id="mdp" type="password" />
+                <br />
+            <label>Cochez si vous n'ete pas un robot:</label>
+            <input id="robot" type="checkbox" />
+            <br
+            <input type="submit" value="Envoyer le formulaire" />
+        </form>
+    </div>
+</html>
