--- a/1_webapp/Web/index.html
+++ b/1_webapp/Web/index.html
@@ -1,17 +1,19 @@
 <html>
+
 	<style type="text/css">
-			lien {
+			.lien {
 				font-family:"Comic Sans MS";
-				color:darkred;
+				color:#B83A1B;
 			}
 			.header {
-				background-color:grey
+				background-color:#DCDCDC;
+				border-radius:15px;
 
 			}
 			.title{
 				font-size:100;
 				font-family:"Comic Sans MS";
-				color:brown;
+				color:#1A1D26;
 				text-align:center;
 			}
 			.bouton{
@@ -22,7 +24,8 @@
 				font-family:"Comic Sans MS";
 				text-align:center;
 				font-style:italic;
-				background-color:grey;
+				background-color:#DCDCDC;
+				border-radius:15px;
 			}
 			.menu{
 				margin-top: -175px;
@@ -37,15 +40,23 @@
 			.center{
 				font-family:"Comic Sans MS";
 				text-align:center;
-				background-color:lightgrey;
 				margin:auto;
 				width:80%;
+				border-radius:15px;
 			}
-			.para{
-				background-color:grey;
-				font-size:15;
+			.text{
 				margin:auto;
 				width:75%;
+				border-radius:15px;
+				background-color:#DCDCDC;
+			}
+			.para{
+				font-size:15;
+				color:#1A1D26;
+			}
+			.title2{
+				font-size:35;
+				color:#223645;
 			}
 			
 			#header{
@@ -78,23 +89,24 @@
 			</form>
 		</div>
 	</div>
+			<br />
 		<div id="center" class="center";>
-			<div id="paragraphe1" class="para">
+			<div id="paragraphe1" class="text">
 
-					<h1> Accueil </h1>
-					<p>Bienvenu sur ce Forum !</p>
-
-			</div>
-			<div id="paragraphe2" class="para">
-
-					<h1> Forum </h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fringilla mi ex, ac blandit nisl posuere vestibulum. Duis pulvinar, turpis vel blandit sagittis, metus velit consectetur metus, id bibendum dui purus tempor est. Praesent vitae auctor tortor. Nam sit amet dui vitae purus scelerisque sodales. Etiam at lorem nec elit ultrices bibendum. Mauris sit amet egestas lacus, eget accumsan lacus. Fusce a rhoncus ex. In sed vestibulum mi, in facilisis nibh. Curabitur bibendum, leo eget cursus auctor, augue nunc condimentum dui, a auctor elit turpis ut velit. Nunc ultricies dui a ante finibus, sed maximus ligula placerat. Aenean mauris sem, lacinia quis convallis eu, pharetra ut justo. Vestibulum efficitur metus quis suscipit interdum.</p>
+					<h1 class="title2"> Accueil </h1>
+					<p class="para">Bienvenu sur ce Forum !</p>
 
 			</div>
-			<div id="paragraphe3" class="para">
+			<div id="paragraphe2" class="text">
 
-					<h1> A-Propos </h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fringilla mi ex, ac blandit nisl posuere vestibulum. Duis pulvinar, turpis vel blandit sagittis, metus velit consectetur metus, id bibendum dui purus tempor est. Praesent vitae auctor tortor. Nam sit amet dui vitae purus scelerisque sodales. Etiam at lorem nec elit ultrices bibendum. Mauris sit amet egestas lacus, eget accumsan lacus. Fusce a rhoncus ex. In sed vestibulum mi, in facilisis nibh. Curabitur bibendum, leo eget cursus auctor, augue nunc condimentum dui, a auctor elit turpis ut velit. Nunc ultricies dui a ante finibus, sed maximus ligula placerat. Aenean mauris sem, lacinia quis convallis eu, pharetra ut justo. Vestibulum efficitur metus quis suscipit interdum.</p>
+					<h1 class="title2"> Forum </h1>
+					<p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fringilla mi ex, ac blandit nisl posuere vestibulum. Duis pulvinar, turpis vel blandit sagittis, metus velit consectetur metus, id bibendum dui purus tempor est. Praesent vitae auctor tortor. Nam sit amet dui vitae purus scelerisque sodales. Etiam at lorem nec elit ultrices bibendum. Mauris sit amet egestas lacus, eget accumsan lacus. Fusce a rhoncus ex. In sed vestibulum mi, in facilisis nibh. Curabitur bibendum, leo eget cursus auctor, augue nunc condimentum dui, a auctor elit turpis ut velit. Nunc ultricies dui a ante finibus, sed maximus ligula placerat. Aenean mauris sem, lacinia quis convallis eu, pharetra ut justo. Vestibulum efficitur metus quis suscipit interdum.</p>
+
+			</div>
+			<div id="paragraphe3" class="text">
+
+					<h1 class="title2"> A-Propos </h1>
+					<p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fringilla mi ex, ac blandit nisl posuere vestibulum. Duis pulvinar, turpis vel blandit sagittis, metus velit consectetur metus, id bibendum dui purus tempor est. Praesent vitae auctor tortor. Nam sit amet dui vitae purus scelerisque sodales. Etiam at lorem nec elit ultrices bibendum. Mauris sit amet egestas lacus, eget accumsan lacus. Fusce a rhoncus ex. In sed vestibulum mi, in facilisis nibh. Curabitur bibendum, leo eget cursus auctor, augue nunc condimentum dui, a auctor elit turpis ut velit. Nunc ultricies dui a ante finibus, sed maximus ligula placerat. Aenean mauris sem, lacinia quis convallis eu, pharetra ut justo. Vestibulum efficitur metus quis suscipit interdum.</p>
 			</div>	
 	</div>
 	<div id="footer">		
