--- a/1_webapp/Web/index2.html
+++ b/1_webapp/Web/index2.html
@@ -3,8 +3,10 @@
         .formulaire{
             font-family:"Comic Sans MS";
                 text-align:center;
-                background-color:lightgrey;
+                background-color:#DCDCDC;
+                color:#223645;
                 margin:auto;
+                border-radius:15px;
                 width:80%
         }
     </style>
