--- a/1_webapp/Web/enregistrement.html
+++ b/1_webapp/Web/enregistrement.html
@@ -1,19 +1,7 @@
 <html>
-    <style type="text/css">
-        .formulaire{
-            font-family:"Comic Sans MS";
-                text-align:center;
-                background-color:#DCDCDC;
-                color:#223645;
-                margin:auto;
-                border-radius:15px;
-                width:80%
-        }
-    </style>
-
-
-
-
+<head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
     <div id="formulaire" class="formulaire">
         <form action="page2.html" method="get">
